# foreshadwownba-inference-pipeline

./: README.md  dvc.yaml  file.html  params.yaml  pyproject.toml
.github/workflows/: cml.yaml
data/input/: .gitignore
data/output/: .gitignore
models/: columns_selected.csv  cross_val_pred.csv
notebooks/: file.html  inference.ipynb  inseason_pred_analysis.ipynb
pipeline/: inference.py
src/: inference.py  model_inference_report.py
src/utils/: logs.py
tests/: test_inference.py
tests/data/: nba_games_inseason_dataset_final.csv
